syntax = "proto3";

package go_service;

option go_package = "contracts";

import "google/api/annotations.proto";

service Greeter {
  rpc SayHello(HelloRequest) returns(HelloReply) {
    option (google.api.http) = {
      post: "/greet/hello"
    };
  };

  rpc GetLiveData(LiveDataRequest) returns(stream LiveDataReply) {};
}

message HelloRequest {
  string Msg = 1;
}

message HelloReply {
  string Msg = 1;
}

message LiveDataRequest {}

message LiveDataReply {
  int32 Data = 1;
}
